# shortener

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
include/: context.h  db.h  handlers.h
src/: db.c  handlers.c  main.c
static/: index.html  main.js
